--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <!-- Loading Screen with Chick Animation -->
+  <!-- Loading Screen -->
   <div id="loadingScreen" class="loading-screen">
     <div class="chick-loader">
       <div class="chick">
@@ -27,11 +27,11 @@
     </div>
   </div>
 
-  <!-- Navigation Bar -->
-  <nav class="navbar navbar-expand-lg navbar-light sticky-top">
+  <!-- Navigation -->
+  <nav class="navbar navbar-expand-lg navbar-light sticky-top navbar-custom">
     <div class="container-fluid">
       <a class="navbar-brand" href="#home">
-        <i class="fas fa-egg"></i> <span data-ta="GVP Poultry" data-en="GVP Poultry">GVP Poultry</span>
+        <i class="fas fa-egg"></i> <span>GVP Poultry</span>
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
@@ -64,8 +64,8 @@
     </div>
   </nav>
 
-  <!-- Home Section -->
-  <section id="home" class="hero-section">
+  <!-- Hero Section -->
+  <section id="home" class="hero-section">   
     <div class="feathers-container"></div>
     <div class="container hero-content">
       <div class="row align-items-center min-vh-100">
@@ -77,8 +77,7 @@
         <div class="col-lg-6 text-center">
          <img src="ChickenBro.gif" alt="Poultry Farm" class="img-fluid hero-image rounded-3">
         </div>
-
-      </div>  
+      </div>
     </div>
   </section>
 
@@ -86,84 +85,8 @@
   <section id="chickens" class="chickens-section py-5">
     <div class="container">
       <h2 class="section-title text-center mb-5" data-ta="நமது கோழி இனங்கள்" data-en="Our Chicken Breeds">நமது கோழி இனங்கள்</h2>
-      <div class="row g-4">
-        <!-- Chicken Card 1 -->
-        <div class="col-lg-4 col-md-6">
-          <div class="chicken-card">
-            <div class="card-image">
-              <img src="https://images.pexels.com/photos/2317904/pexels-photo-2317904.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Broiler" class="img-fluid">
-            </div>
-            <div class="card-content">
-              <h3 class="card-title" data-ta="பருத்தி கோழி" data-en="Broiler">பருத்தி கோழி</h3>
-              <p class="card-description" data-ta="வேகமாக வளரும் கோழி இனம். சுவையான கோழி இறைச்சி வழங்குகிறது।" data-en="Fast-growing breed. Provides delicious chicken meat.">வேகமாக வளரும் கோழி இனம். சுவையான கோழி இறைச்சி வழங்குகிறது।</p>
-            </div>
-          </div>
-        </div>
-
-        <!-- Chicken Card 2 -->
-        <div class="col-lg-4 col-md-6">
-          <div class="chicken-card">
-            <div class="card-image">
-              <img src="https://images.pexels.com/photos/821365/pexels-photo-821365.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Layer" class="img-fluid">
-            </div>
-            <div class="card-content">
-              <h3 class="card-title" data-ta="முட்டை கோழி" data-en="Layer">முட்டை கோழி</h3>
-              <p class="card-description" data-ta="அதிக அளவு முட்டைகளை தரக்ூடிய கோழி இனம். சுபோஷணம் பெற்ற முட்டைகள்।" data-en="High egg-producing breed. Nutritious eggs.">அதிக அளவு முட்டைகளை தரக்ூடிய கோழி இனம். சுபோஷணம் பெற்ற முட்டைகள்।</p>
-            </div>
-          </div>
-        </div>
-
-        <!-- Chicken Card 3 -->
-        <div class="col-lg-4 col-md-6">
-          <div class="chicken-card">
-            <div class="card-image">
-              <img src="https://images.pexels.com/photos/2317906/pexels-photo-2317906.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Native" class="img-fluid">
-            </div>
-            <div class="card-content">
-              <h3 class="card-title" data-ta="நாட்டு கோழி" data-en="Native">நாட்டு கோழி</h3>
-              <p class="card-description" data-ta="ஆரோக்கியமான நாட்டு இனங்கள். உயர்தர முட்டை மற்றும் இறைச்சி வழங்குகிறது।" data-en="Healthy native breeds. Superior quality eggs & meat.">ஆரோக்கியமான நாட்டு இனங்கள். உயர்தர முட்டை மற்றும் இறைச்சி வழங்குகிறது।</p>
-            </div>
-          </div>
-        </div>
-
-        <!-- Chicken Card 4 -->
-        <div class="col-lg-4 col-md-6">
-          <div class="chicken-card">
-            <div class="card-image">
-              <img src="https://images.pexels.com/photos/2317903/pexels-photo-2317903.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Ornamental" class="img-fluid">
-            </div>
-            <div class="card-content">
-              <h3 class="card-title" data-ta="அலங்கார கோழி" data-en="Ornamental">அலங்கார கோழி</h3>
-              <p class="card-description" data-ta="அழகிய கோழி இனங்கள் பண்ணை அலங்காரத்திற்கும் பயன்படுத்தப்படுகிறது।" data-en="Beautiful breeds for farm decoration.">அழகிய கோழி இனங்கள் பண்ணை அலங்காரத்திற்கும் பயன்படுத்தப்படுகிறது।</p>
-            </div>
-          </div>
-        </div>
-
-        <!-- Chicken Card 5 -->
-        <div class="col-lg-4 col-md-6">
-          <div class="chicken-card">
-            <div class="card-image">
-              <img src="https://images.pexels.com/photos/2317901/pexels-photo-2317901.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Chicks" class="img-fluid">
-            </div>
-            <div class="card-content">
-              <h3 class="card-title" data-ta="குஞ்சுகள்" data-en="Chicks">குஞ்சுகள்</h3>
-              <p class="card-description" data-ta="புதிய குஞ்சுகளை ஒரு வாரத்திற்குள் வழங்க ஆயத்தம்। தாய் கோழி உடன்." data-en="Fresh chicks available weekly. With caring hens.">புதிய குஞ்சுகளை ஒரு வாரத்திற்குள் வழங்க ஆயத்தம்। தாய் கோழி உடன்.</p>
-            </div>
-          </div>
-        </div>
-
-        <!-- Chicken Card 6 -->
-        <div class="col-lg-4 col-md-6">
-          <div class="chicken-card">
-            <div class="card-image">
-              <img src="https://images.pexels.com/photos/2317902/pexels-photo-2317902.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Eggs" class="img-fluid">
-            </div>
-            <div class="card-content">
-              <h3 class="card-title" data-ta="முட்டைகள்" data-en="Eggs">முட்டைகள்</h3>
-              <p class="card-description" data-ta="தாজா, புஷ்டிகர முட்டை ஒவ்வொரு நாளும் வழங்கப்படுகிறது. முற்றிலும் ஆரோக்கியமான." data-en="Fresh, nutritious eggs daily. Completely healthy.">தாজா, புஷ்டிகர முட்டை ஒவ்வொரு நாளும் வழங்கப்படுகிறது। முற்றிலும் ஆரோக்கியமான।</p>
-            </div>
-          </div>
-        </div>
+      <div class="row g-4" id="chickenGrid">
+        <!-- Dynamically populated -->
       </div>
     </div>
   </section>
@@ -174,12 +97,12 @@
       <div class="row align-items-center g-5">
         <div class="col-lg-6">
           <div class="about-image">
-            <img src="https://images.pexels.com/photos/2317900/pexels-photo-2317900.jpeg?auto=compress&cs=tinysrgb&w=600" alt="GVP Farm" class="img-fluid rounded-3">
+            <img src="https://images.pexels.com/photos/2317904/pexels-photo-2317904.jpeg?auto=compress&cs=tinysrgb&w=600" alt="GVP Farm" class="img-fluid rounded-4 shadow-lg">
           </div>
         </div>
         <div class="col-lg-6">
           <h2 class="section-title" data-ta="நம்மைப் பற்றி" data-en="About Us">நம்மைப் பற்றி</h2>
-          <p class="about-text" data-ta="GVP கோழி பண்ணை 20 ஆண்டுகளுக்கும் மேலாக தமிழ்நாட்டில் கோழி வளர்ப்பு இயல்பாய் நடத்திக் கொண்டிருக்கிறது। தரமான கோழி மற்றும் முட்டையை மக்களுக்கு வழங்குவதில் நாங்கள் பெருமைப்படுகிறோம்।" data-en="GVP Poultry has been serving Tamil Nadu for over 20 years with quality farming practices. We are committed to providing the best chickens and eggs to families.">GVP கோழி பண்ணை 20 ஆண்டுகளுக்கும் மேலாக தமிழ்நாட்டில் கோழி வளர்ப்பு இயல்பாய் நடத்திக் கொண்டிருக்கிறது। தரமான கோழி மற்றும் முட்டையை மக்களுக்கு வழங்குவதில் நாங்கள் பெருமைப்படுகிறோம்।</p>
+          <p class="about-text" data-ta="GVP கோழி பண்ணை 20 ஆண்டுகளுக்கும் மேலாக தமிழ்நாட்டில் கோழி வளர்ப்பு இயல்பாய் நடத்திக் கொண்டிருக்கிறது।" data-en="GVP Poultry has been serving Tamil Nadu for over 20 years with quality farming practices.">GVP கோழி பண்ணை 20 ஆண்டுகளுக்கும் மேலாக தமிழ்நாட்டில் கோழி வளர்ப்பு இயல்பாய் நடத்திக் கொண்டிருக்கிறது।</p>
           <ul class="about-features">
             <li><i class="fas fa-check-circle"></i> <span data-ta="100% நோயற்ற நிலை" data-en="100% Disease-Free">100% நோயற்ற நிலை</span></li>
             <li><i class="fas fa-check-circle"></i> <span data-ta="உயர்தர உணவு" data-en="Premium Quality Feed">உயர்தர உணவு</span></li>
@@ -191,70 +114,31 @@
     </div>
   </section>
 
-  <!-- Media Section -->
-  <section id="media" class="media-section py-5">
+  <!-- Contact Section -->
+  <section id="contact" class="contact-section py-5">
     <div class="container">
-      <h2 class="section-title text-center mb-5" data-ta="மீடியா மற்றும் வீடியோக்கள்" data-en="Media & Videos">மீடியா மற்றும் வீடியோக்கள்</h2>
-      <div class="row g-4">
-        <div class="col-lg-4 col-md-6">
-          <div class="video-card">
-            <div class="video-container">
-              <iframe width="100%" height="250" src="https://www.youtube.com/embed/jNQXAC9IVRw" frameborder="0" allowfullscreen></iframe>
-            </div>
-            <h4 class="video-title mt-3" data-ta="கோழி பண்ணை நிலாவல" data-en="Farm Tour">கோழி பண்ணை நிலாவல</h4>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6">
-          <div class="video-card">
-            <div class="video-container">
-              <iframe width="100%" height="250" src="https://www.youtube.com/embed/9bZkp7q19f0" frameborder="0" allowfullscreen></iframe>
-            </div>
-            <h4 class="video-title mt-3" data-ta="முட்டை வாங்கல் செயல்முறை" data-en="Egg Collection">முட்டை வாங்கல் செயல்முறை</h4>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6">
-          <div class="video-card">
-            <div class="video-container">
-              <iframe width="100%" height="250" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allowfullscreen></iframe>
-            </div>
-            <h4 class="video-title mt-3" data-ta="குஞ்சு வளர்ப்பு" data-en="Chick Rearing">குஞ்சு வளர்ப்பு</h4>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Location Section -->
-  <section id="location" class="location-section py-5">
-    <div class="container">
-      <h2 class="section-title text-center mb-5" data-ta="எங்களைக் கண்டறியுங்கள்" data-en="Find Us">எங்களைக் கண்டறியுங்கள்</h2>
+      <h2 class="section-title text-center mb-5" data-ta="தொடர்புக் கொள்ளுங்கள்" data-en="Contact Us">தொடர்புக் கொள்ளுங்கள்</h2>
       <div class="row g-5">
         <div class="col-lg-6">
-          <div class="map-container">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3887.0221837262357!2d80.27156132346041!3d13.081436587224503!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a526f5e5e5e5e5d%3A0x5e5e5e5e5e5e5e5e!2sChennai%2C%20Tamil%20Nadu!5e0!3m2!1sen!2sin!4v1234567890" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-          </div>
-        </div>
-        <div class="col-lg-6">
           <div class="contact-card">
-            <h3 class="mb-4" data-ta="தொடர்புக் கொள்ளுங்கள்" data-en="Contact Us">தொடர்புக் கொள்ளுங்கள்</h3>
-            <div class="contact-item mb-3">
+            <div class="contact-item mb-4">
               <i class="fas fa-map-marker-alt"></i>
               <div>
                 <h5 data-ta="முகவரி" data-en="Address">முகவரி</h5>
                 <p data-ta="GVP கோழி பண்ணை, சென்னை, தமிழ்நாடு" data-en="GVP Poultry Farm, Chennai, Tamil Nadu">GVP கோழி பண்ணை, சென்னை, தமிழ்நாடு</p>
               </div>
             </div>
-            <div class="contact-item mb-3">
+            <div class="contact-item mb-4">
               <i class="fas fa-phone"></i>
               <div>
                 <h5 data-ta="தொலைபேசி" data-en="Phone">தொலைபேசி</h5>
                 <p><a href="tel:+919876543210">+91 98765 43210</a></p>
               </div>
             </div>
-            <div class="contact-item mb-3">
+            <div class="contact-item mb-4">
               <i class="fas fa-envelope"></i>
               <div>
-                <h5 data-ta="ईमेल" data-en="Email">ईमेल</h5>
+                <h5 data-ta="மின்னஞ்சல்" data-en="Email">மின்னஞ்சல்</h5>
                 <p><a href="mailto:info@gvppoultry.com">info@gvppoultry.com</a></p>
               </div>
             </div>
@@ -262,9 +146,14 @@
               <i class="fas fa-clock"></i>
               <div>
                 <h5 data-ta="வேலையாள் நேரம்" data-en="Working Hours">வேலையாள் நேரம்</h5>
-                <p data-ta="தினமும் 8:00 AM - 6:00 PM" data-en="Mon - Sat, 8:00 AM - 6:00 PM">தினமும் 8:00 AM - 6:00 PM</p>
+                <p data-ta="தினமும் 8:00 AM - 6:00 PM" data-en="Daily 8:00 AM - 6:00 PM">தினமும் 8:00 AM - 6:00 PM</p>
               </div>
             </div>
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <div class="map-container rounded-4 overflow-hidden shadow-lg">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3887.0221837262357!2d80.27156132346041!3d13.081436587224503!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a526f5e5e5e5e5d%3A0x5e5e5e5e5e5e5e5e!2sChennai%2C%20Tamil%20Nadu!5e0!3m2!1sen!2sin!4v1234567890" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
         </div>
       </div>
@@ -272,18 +161,131 @@
   </section>
 
   <!-- Footer -->
-  <footer class="footer py-4">
-    <div class="container text-center">
-      <p class="mb-2" data-ta="© 2024 GVP கோழி பண்ணை. அனைத்து உரிமைகளும் பாதுகாக்கப்பட்டுள்ளன।" data-en="© 2024 GVP Poultry. All rights reserved.">© 2024 GVP கோழி பண்ணை. அனைத்து உரிமைகளும் பாதுகாக்கப்பட்டுள்ளன।</p>
-      <div class="social-links">
-        <a href="#" class="social-link"><i class="fab fa-facebook"></i></a>
-        <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
-        <a href="#" class="social-link"><i class="fab fa-whatsapp"></i></a>
+  <footer class="footer py-5">
+    <div class="container">
+      <div class="row mb-4">
+        <div class="col-md-4 text-center footer-item">
+          <div class="footer-icon">
+            <i class="fas fa-egg"></i>
+          </div>
+          <h5 data-ta="தரமான முட்டை" data-en="Quality Eggs">தரமான முட்டை</h5>
+          <p data-ta="100% நாட்டு முட்டை தினமும் கிடைக்கிறது" data-en="100% country eggs available daily">100% நாட்டு முட்டை தினமும் கிடைக்கிறது</p>
+        </div>
+        <div class="col-md-4 text-center footer-item">
+          <div class="footer-icon">
+            <i class="fas fa-shield-halved"></i>
+          </div>
+          <h5 data-ta="தரமான கோழி" data-en="Quality Chicken">தரமான கோழி</h5>
+          <p data-ta="அசல் நாட்டு கோழி பல வகையில் கிடைக்கிறது" data-en="Original country chicken available in many varieties">அசல் நாட்டு கோழி பல வகையில் கிடைக்கிறது</p>
+        </div>
+        <div class="col-md-4 text-center footer-item">
+          <div class="footer-icon">
+            <i class="fas fa-certificate"></i>
+          </div>
+          <h5 data-ta="100% உண்மைத்தன்மை" data-en="100% Authentic">100% உண்மைத்தன்மை</h5>
+          <p data-ta="நோய்-நிறைந்த நிலை இல்லாத கோழி மற்றும் முட்டை" data-en="Disease-free chicken and eggs">நோய்-நிறைந்த நிலை இல்லாத கோழி மற்றும் முட்டை</p>
+        </div>
+      </div>
+      <div class="footer-divider"></div>
+      <div class="row">
+        <div class="col-12 text-center">
+          <p class="mb-3" data-ta="© 2024 GVP கோழி பண்ணை. அனைத்து உரிமைகளும் பாதுகாக்கப்பட்டுள்ளன।" data-en="© 2024 GVP Poultry. All rights reserved.">© 2024 GVP கோழி பண்ணை. அனைத்து உரிமைகளும் பாதுகாக்கப்பட்டுள்ளன।</p>
+          <p class="developer-credit">
+            <button class="btn btn-link text-decoration-none" data-bs-toggle="modal" data-bs-target="#developerModal">
+              <span data-ta="Developed by Ajith Babu" data-en="Developed by Ajith Babu">Developed by Ajith Babu</span>
+            </button>
+          </p>
+          <div class="social-links">
+            <a href="#" class="social-link"><i class="fab fa-facebook"></i></a>
+            <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
+            <a href="#" class="social-link"><i class="fab fa-whatsapp"></i></a>
+          </div>
+        </div>
       </div>
     </div>
   </footer>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Chicken Detail Modal -->
+  <div class="modal fade" id="chickenModal" tabindex="-1">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header border-0 p-0 position-relative">
+          <img id="modalImage" src="" alt="Chicken" class="w-100" style="height: 300px; object-fit: cover;">
+          <button type="button" class="btn-close btn-close-white position-absolute top-0 end-0 m-3" data-bs-dismiss="modal"></button>
+        </div>
+        <div class="modal-body">
+          <h2 id="modalTitle" class="modal-title text-primary mb-3"></h2>
+          <p id="modalDescription" class="text-muted mb-4"></p>
+          <div class="row">
+            <div class="col-md-6 mb-3">
+              <h5 class="text-primary" data-ta="சிறப்பம்" data-en="Specialty">சிறப்பம்</h5>
+              <p id="modalSpecialty"></p>
+            </div>
+            <div class="col-md-6 mb-3">
+              <h5 class="text-primary" data-ta="பயன்" data-en="Uses">பயன்</h5>
+              <p id="modalUses"></p>
+            </div>
+          </div>
+          <div>
+            <h5 class="text-primary" data-ta="விலை நெறி" data-en="Price Range">விலை நெறி</h5>
+            <p id="modalPrice" class="fs-5 fw-bold"></p>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <a href="tel:+919876543210" class="btn btn-primary btn-lg w-100" data-ta="ஆர்டர் செய்யவும்" data-en="Place Order">ஆர்டர் செய்யவும்</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Developer Info Modal -->
+  <div class="modal fade" id="developerModal" tabindex="-1">
+    <div class="modal-dialog modal-sm">
+      <div class="modal-content">
+        <div class="modal-header bg-primary text-white border-0">
+          <h5 class="modal-title">Ajith Babu</h5>
+          <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"></button>
+        </div>
+        <div class="modal-body text-center py-4">
+          <div class="mb-4">
+            <i class="fas fa-user-circle fa-5x text-primary"></i>
+          </div>
+          <h5>Ajith Babu</h5>
+          <p class="text-muted mb-4">Full Stack Developer</p>
+          <div class="mb-4">
+            <p class="mb-2">
+              <i class="fas fa-envelope text-primary me-2"></i>
+              <a href="mailto:ajithbabu@example.com" class="text-decoration-none">ajithbabu@example.com</a>
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Chatbot Launcher -->
+  <button id="chatbotLauncher" class="chatbot-launcher" title="Chat with us">
+    <i class="fas fa-comments"></i>
+  </button>
+
+  <!-- Chatbot Widget -->
+  <div id="chatBot" class="chatbot">
+    <div class="chatbot-header">
+      <div class="chatbot-title">
+        <i class="fas fa-message"></i>
+        <span>AskAjT</span>
+      </div>
+      <button id="chatbotToggle" class="chatbot-toggle" type="button">
+        <i class="fas fa-times"></i>
+      </button>
+    </div>
+    <div id="chatbotMessages" class="chatbot-messages"></div>
+    <div class="chatbot-footer">
+      <div id="questionsContainer" class="questions-container"></div>
+    </div>
+  </div>
+
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script type="module" src="js/script.js"></script>
 </body>
 </html>
