--- a/index.html
+++ b/index.html
@@ -30,22 +30,27 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light sticky-top navbar-custom">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#home">
-        <i class="fas fa-egg"></i> <span>GVP Poultry</span>
+      <a class="navbar-brand d-flex align-items-center" href="#home">
+        <img src="assets/images/logo.png" 
+            alt="Egg" 
+            class="img-fluid me-2"
+            style="height: 50px; width: auto;">
+        <span>GVP Poultry</span>
       </a>
+
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#home" data-ta="வீடு" data-en="Home">வீடு</a>
+            <a class="nav-link" href="#home" data-ta="முகப்பு" data-en="Home">வீடு</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#chickens" data-ta="கோழிகள்" data-en="Chickens">கோழிகள்</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#about" data-ta="நம்மைப் பற்றி" data-en="About">நம்மைப் பற்றி</a>
+            <a class="nav-link" href="#about" data-ta="எங்களை பற்றி" data-en="About">நம்மைப் பற்றி</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#media" data-ta="மீடியா" data-en="Media">மீடியா</a>
