--- a/index.html
+++ b/index.html
@@ -115,13 +115,13 @@
           <!-- Carousel inner -->
           <div class="carousel-inner rounded-4">
             <div class="carousel-item active">
-              <img src="https://images.pexels.com/photos/2317904/pexels-photo-2317904.jpeg?auto=compress&cs=tinysrgb&w=600" class="d-block w-100 rounded-4" alt="GVP Farm 1">
+              <img src="https://github.com/ithBabu3/GVP-Poultary/blob/main/assets/images/about%201.png?raw=true" class="d-block w-100 rounded-4" alt="GVP Farm 1">
             </div>
             <div class="carousel-item">
-              <img src="https://images.pexels.com/photos/4145197/pexels-photo-4145197.jpeg?auto=compress&cs=tinysrgb&w=600" class="d-block w-100 rounded-4" alt="GVP Farm 2">
+              <img src="https://github.com/ithBabu3/GVP-Poultary/blob/main/assets/images/about%202.jpg?raw=true" class="d-block w-100 rounded-4" alt="GVP Farm 2">
             </div>
             <div class="carousel-item">
-              <img src="https://images.pexels.com/photos/462118/pexels-photo-462118.jpeg?auto=compress&cs=tinysrgb&w=600" class="d-block w-100 rounded-4" alt="GVP Farm 3">
+              <img src="https://github.com/ithBabu3/GVP-Poultary/blob/main/assets/images/about%203.png?raw=true" class="d-block w-100 rounded-4" alt="GVP Farm 3">
             </div>
           </div>
 
