--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
               <img src="https://github.com/ithBabu3/GVP-Poultary/blob/main/assets/images/about%202.jpg?raw=true" class="d-block w-100 rounded-4" alt="GVP Farm 2">
             </div>
             <div class="carousel-item">
-              <img src="https://github.com/ithBabu3/GVP-Poultary/blob/main/assets/images/about%203.png?raw=true" class="d-block w-100 rounded-4" alt="GVP Farm 3">
+              <img src="https://github.com/ithBabu3/GVP-Poultary/blob/main/assets/images/about%203%20(2).png?raw=true" class="d-block w-100 rounded-4" alt="GVP Farm 3">
             </div>
           </div>
 
