--- a/index.html
+++ b/index.html
@@ -52,11 +52,9 @@
           <li class="nav-item">
             <a class="nav-link" href="#about" data-ta="எங்களை பற்றி" data-en="About">எங்களை பற்றி</a>
           </li>
+          
           <li class="nav-item">
-            <a class="nav-link" href="#media" data-ta="மீடியா" data-en="Media">மீடியா</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#location" data-ta="இருப்பிடம்" data-en="Location">இருப்பிடம்</a>
+            <a class="nav-link" href="#contact" data-ta="இருப்பிடம்" data-en="Location">இருப்பிடம்</a>
           </li>
           <li class="nav-item">
             <div class="language-switcher">
@@ -167,7 +165,7 @@
               <i class="fas fa-map-marker-alt"></i>
               <div>
                 <h5 data-ta="முகவரி" data-en="Address">முகவரி</h5>
-                <p data-ta="GVP கோழி பண்ணை, மதுரை, தமிழ்நாடு" data-en="GVP Poultry Farm, Madurai, Tamil Nadu">GVP கோழி பண்ணை, சென்னை, தமிழ்நாடு</p>
+                <p data-ta="GVP கோழி பண்ணை, கள்ளம்பல ரோடு மதுரை, தமிழ்நாடு" data-en="GVP Poultry Farm, Kallamabala road Madurai, Tamil Nadu">GVP கோழி பண்ணை, சென்னை, தமிழ்நாடு</p>
               </div>
             </div>
             <div class="contact-item mb-4">
@@ -242,13 +240,17 @@
           </p>
           <div class="social-links">
             <a href="#" class="social-link"><i class="fab fa-facebook"></i></a>
-            <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
-            <a href="#" class="social-link"><i class="fab fa-whatsapp"></i></a>
+            <a href="https://www.instagram.com/gvp_poultry_farm?igsh=bHBnM2l0ejc4ZTcw" class="social-link"><i class="fab fa-instagram"></i></a>
+            <a href="https://wa.me/918778150405" class="social-link"><i class="fab fa-whatsapp"></i></a>
           </div>
         </div>
       </div>
     </div>
   </footer>
+
+
+  
+
 
   <!-- Chicken Detail Modal -->
   <div class="modal fade" id="chickenModal" tabindex="-1">
